BUG: 130148

patch already commited to the 1.9 branch,
patch by Dominic Battre